--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,7 +1,8 @@
 .cardGroup {
-    display: flex;
+    display: inline-flex;
     justify-content: center;
-    margin: 2.5em auto;
+    margin: 1.5em;
+    width: 400px;
   }
   
   .singleCard {
