--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -1,5 +1,6 @@
 .countContainer {
     width: 100%;
+    height: 20px;
 }
 
 .countNumber {
@@ -18,7 +19,7 @@
 }
 
 .addCartBtn {
-    margin: 2em auto;
+    margin: 1em auto;
     background-color: lightsalmon;
     color: #282c34;
     text-align: center;
@@ -37,3 +38,4 @@
     background-color: white;
     color: lightsalmon;
 }
+
