--- a/src/components/Items/Item.css
+++ b/src/components/Items/Item.css
@@ -6,15 +6,6 @@
   color: white;
 }
 
-/* CARDS BODY */
-
-.cardGroup {
-  display: inline-flex;
-  justify-content: center;
-  margin: 1.5em;
-  margin-top: 3rem;
-  width: 400px;
-}
 
 .cardBody {
   padding: 0.5em;
@@ -68,3 +59,6 @@
   border: none!important;
 }
 
+.links {
+  text-decoration: none;
+}
