adding Loading to ItemDetail - still on onAdd function

--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -1,4 +1,14 @@
 .itemDetail {
+    display: flex;
     color: white;
-    margin-top: 150px;
+}
+
+.itemTitle {
+    width: 100%;
+    display: block;
+}
+
+.detailImg {
+    width: 70%;
+    border-radius: 50%;
 }
