--- a/src/components/Items/Item.css
+++ b/src/components/Items/Item.css
@@ -11,6 +11,7 @@
   padding: 0.5em;
   background-color: #282c34;
   border: none;
+  padding: 4rem !important;
 }
  
 .singleCard {
@@ -41,7 +42,7 @@
 .imgProd {
   width: 350px;
   height: auto;
-  border-radius: 30px;
+  border-radius: 50%;
   margin: 1.5rem auto;
 }
 
