--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -21,5 +21,6 @@
     justify-content: center;
     margin: 1.5em;
     margin-top: 3rem;
-    width: 400px;
+    max-width: 100%;
+    flex-wrap: wrap;
   }
