delete single item

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
   background-color: #282c34;
-  min-height: 150vh;
+  min-height: 100vh;
+  height: auto;
 }
 
 .App-logo {
