--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -1,14 +1,43 @@
 .itemDetail {
     display: flex;
     color: white;
+    justify-content: center;
+    margin-top: 100px;
+    align-items: center;
 }
 
 .itemTitle {
-    width: 100%;
-    display: block;
+    font-size: 3.2rem;
+    text-transform: uppercase;
 }
 
 .detailImg {
     width: 70%;
     border-radius: 50%;
+}
+
+.buttonsCart {
+    margin-top: 40px;
+}
+
+.btnGoCart {
+    display: inline-flex;
+    justify-content: center;
+}
+
+.cartDescription {
+    color: white;
+    font-size: 1.5rem;
+    font-style: italic;
+
+}
+
+.cartPrice {
+    font-size: 1.2rem;
+}
+
+.textItemDetail {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
 }
