trying to fix cantidad - filtrado por categoria con firebase

--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -3,7 +3,7 @@
 }
 
 .imgProdCart {
-    width: 25%;
+    width: 20%;
     border-radius: 50%;
 }
 
@@ -11,6 +11,10 @@
     display: inline-flex;
     align-items: center;
     margin: 2rem auto;
+}
+
+.oneItemCart {
+    width: 100%;
 }
 
 
